src/objects/TRACKING_LOG_HISTORIC__b.object
<CustomObject>
    <fields>
        <fullName>END_CPUTIME__c</fullName>
        <label>END CPUTIME</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_DATE__c</fullName>
        <label>END DATE</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>END_DML_OPERATIONS__c</fullName>
        <label>END DML OPERATIONS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_HEAPSIZE__c</fullName>
        <label>END HEAPSIZE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_QUERYROWS__c</fullName>
        <label>END QUERYROWS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>END_QUERYS__c</fullName>
        <label>END QUERY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERROR_DESCRIPTION__c</fullName>
        <label>ERROR DESCRIPTION</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERROR__c</fullName>
        <label>ERROR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXCEPTION__c</fullName>
        <label>EXCEPTION</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEY__c</fullName>
        <label>KEY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_NUMBER__c</fullName>
        <label>LINE NUMBER</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QUANTITY_RECORDS__c</fullName>
        <label>QUANTITY RECORDS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REQUEST__c</fullName>
        <label>REQUEST</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RESPONSE__c</fullName>
        <label>RESPONSE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STACKTRACE__c</fullName>
        <label>STACKTRACE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>START_CPUTIME__c</fullName>
        <label>START CPUTIME</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_DATE__c</fullName>
        <label>START DATE</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>START_DML_OPERATIONS__c</fullName>
        <label>START DML OPERATIONS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_HEAPSIZE__c</fullName>
        <label>START HEAPSIZE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_QUERYROWS__c</fullName>
        <label>START QUERYROWS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>START_QUERYS__c</fullName>
        <label>START QUERY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <label>TYPE</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VERSION__c</fullName>
        <label>VERSION</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>TRACKINGLOGHISTORICINDEX</fullName>
        <fields>
            <name>TYPE__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>START_DATE__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>END_DATE__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>TRACKING LOG HISTORIC INDEX</label>
    </indexes>
    <label>Tracking Log historic</label>
    <pluralLabel>Tracking Logs historic</pluralLabel>
</CustomObject>